# historee

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  default_domain_patterns.txt  domain_patterns.txt  main.py
.github/workflows/: ci.yml  dependency-review.yml  release.yml  security.yml
src/: args.rs  browser.rs  domain.rs  lib.rs  main.rs  patterns.rs  sqlite.rs  stats.rs  utils.rs
