[package]
name = "historee"
authors = ["Ryan Walters <ryan@walters.to>"]
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
url = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
rayon = "1.8"
num_cpus = "1.17.0"
