[package]
name = "historee"
authors = ["Ryan Walters <ryan@walters.to>"]
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
url = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "env-filter", "local-time"] }
time = { version = "0.3.41", features = ["macros", "formatting"] }
